tests/snapshots/integration__integration_tests__list__with_upstream_tracking.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--branches"
    - "--full"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
  [1mBranch[0m       [1mStatus[0m        [1mHEAD±[0m    [1mmain↕[0m     [1mmain…±[0m  [1mPath[0m                [1mRemote⇅[0m  [1mCI[0m  [1mCommit[0m    [1mAge[0m   [1mMessage
@ [1mmain[0m             [2m^[22m[2m|[22m                                   [1m./repo[0m                 [2m|[0m         [2m6c3da842[0m  [2m1d[0m    [2mInitial commit on main
+ ahead            [2m↑[22m[2m⇡[22m                [32m↑2[0m        [32m+2[0m       ./repo.ahead         [32m⇡2[0m          [2m8d8f4673[0m  [2m1d[0m    [2mAhead commit 2
+ [2mbehind[0m           [2m_[22m[2m⇣[22m                                   [2m./repo.behind[0m            [2m[31m⇣1[0m      [2m6c3da842[0m  [2m1d[0m    [2mInitial commit on main
+ diverged         [2m↑[22m[2m⇅[22m                [32m↑1[0m        [32m+1[0m       ./repo.diverged      [32m⇡1[0m  [2m[31m⇣1[0m      [2mca7cb696[0m  [2m1d[0m    [2mDiverged local commit
+ [2min-sync[0m          [2m_[22m[2m|[22m                                   [2m./repo.in-sync[0m         [2m|[0m         [2m6c3da842[0m  [2m1d[0m    [2mInitial commit on main
+ [2mno-upstream[0m      [2m_[22m                                    [2m./repo.no-upstream[0m               [2m6c3da842[0m  [2m1d[0m    [2mInitial commit on main

⚪ [2mShowing 6 worktrees; 2 ahead
